# WalkMoneyAPI

./: .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
data_insert/: account_types_insert.py  balance_trigger_insert.py  currency_insert.py  main_insert.py  roles_insert.py  users_insert.py
migrations/: env.py  models.py
migrations/versions/: 02f9bf642dc3_init.py  0bc15fce4ddd_init.py  2d7f9a232a1a_init.py  4564bb609034_init.py  535fa5002151_init.py  aa51f61f024f_init.py  bef09ab30029_init.py  c70a94beeb74_init.py  cbde6b51e453_init.py  d204d4265125_init.py  d3d8f750ebd7_init.py  d67049952c0f_init.py  fb3df7086993_init.py
src/: main.py  routers.py
src/account/: models.py  repository.py
src/account_type/: dependencies.py  models.py  repository.py  router.py  service.py
src/auth/: dependencies.py  jwt_auth.py  repository.py  router.py  schemas.py  service.py
src/budget/: models.py  repository.py
src/category/: dependencies.py  models.py  repository.py  router.py  service.py
src/common/: base.py  configuration.py  database.py  exceptions.py  logger.py  redis_db.py  repository.py  schemas.py  smtp.py
src/currency/: dependecies.py  models.py  repository.py  router.py  service.py
src/loan/: models.py  repository.py
src/me/: dependencies.py  router.py  schemas.py  service.py
src/role/: models.py
src/subcategory/: models.py
src/transaction/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
src/transfer/: models.py
src/user/: exceptions.py  models.py  repository.py
(+28 files in other folders)
